--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -22,7 +22,7 @@ body::before {
   width: 100%;
   height: 100%;
   content: "";
-  background-image: url(/assets/img/noise.gif);
+  background-image: url(./assets/img/noise.gif);
   opacity: .05;
   z-index: 100000;
   pointer-events: none;
@@ -52,8 +52,8 @@ header h1 {
   color: #fff;
   font-family: 'roboto', sans-serif;
   font-size: 27px;
-  font-weight: 100;
-  letter-spacing: 0.2em;
+  font-weight: 300;
+  letter-spacing: 0.1em;
   cursor: pointer;
   transition: 1s;
   transform-style: preserve-3d;
@@ -126,7 +126,7 @@ header .nav:hover .bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 160px;
+  padding: 0 140px;
   width: 100%;
   height: 100vh;
 }
@@ -137,7 +137,7 @@ header .nav:hover .bar {
   font-size: 5vw;
   font-weight: 700;
   line-height: 1.2;
-  letter-spacing: -1px;
+  letter-spacing: -3px;
 }
 
 .sec_01 .title img {
@@ -148,7 +148,6 @@ header .nav:hover .bar {
 
 .sec_01 .img_area {
   position: relative;
-  right: 80px;
 }
 
 .sec_01 .img_area .thumb {
@@ -165,27 +164,31 @@ header .nav:hover .bar {
 .sec_01 .img_area .circle {
   position: absolute;
   top: -80px;
-  width: 600px;
-  height: 600px;
-  background: linear-gradient(109.53deg, rgba(255, 179, 155, 0.72) 0.4%, #89C4EF 99.89%);
-  border-radius: 50% 100% 55%;
-  border-radius: 40% 60% 65% 35% / 40% 45% 55% 60%;
+  right:0px;
+  width: 530px;
+  height: 390px;
+  background: linear-gradient(141deg, rgb(235 255 155 / 98%) 0.4%, #6db6f5 99.89%);;
+  border-radius: 34% 78% 45% 65% / 40% 55% 55% 60%;
   transition: 0.5s;
 }
 
 .sec_01 .img_area .circle.type_02 {
   top: auto;
-  bottom: 0;
-  width: 300px;
-  height: 300px;
-  background: linear-gradient(109.53deg, #FFC4C4 0.4%, #B2C973 99.89%);
+  bottom: -60px;
+  right:0;
+  width: 320px;
+  height: 230px;
+  background: linear-gradient(194deg, #edb7b7, #b6d10db3);
+  border-radius: 70% 40% 60% 40%;
   animation: circle 4s linear infinite;
 }
 
 .sec_01 .img_area .circle.type_03 {
-  top: 0;
-  left: 0;
-  width: 300px;
-  height: 300px;
-  background: linear-gradient(104.48deg, #FFBEBE 7.76%, #8987E7 92.56%);
+  z-index:10;
+  top: 290px;
+  left: -70px;
+  width: 130px;
+  height: 140px;
+  background: linear-gradient(289deg, #bbe1f3, #f9b1b1);
+  border-radius: 50% 70% 70% 65%;
 }
