--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -22,7 +22,7 @@ body::before {
   width: 100%;
   height: 100%;
   content: "";
-  background-image: url(./assets/img/noise.gif);
+  background-image: url('../img/noise.gif');
   opacity: .05;
   z-index: 100000;
   pointer-events: none;
@@ -132,6 +132,7 @@ header .nav:hover .bar {
 }
 
 .sec_01 .title {
+  position: relative;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   font-size: 5vw;
@@ -144,6 +145,57 @@ header .nav:hover .bar {
   animation: greet 1s infinite;
   width: 70px;
   height: 70px;
+}
+
+.sec_01 .text {
+  width: 100%;
+}
+
+p {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0;
+}
+
+.word {
+  position: absolute;
+  width: 100%;
+  opacity: 0;
+}
+
+.letter {
+  display: inline-block;
+  position: relative;
+}
+
+.letter.out {
+  transform: rotateX(90deg);
+  transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.letter.behind {
+  transform: rotateX(-90deg);
+}
+
+.letter.in {
+  transform: rotateX(0deg);
+  transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.wisteria {
+  color: #c6a9d3;
+}
+
+.belize {
+  color: #6eb5e4;
+}
+
+.pomegranate {
+  color: #f3968b;
+}
+
+.green {
+  color: #86c057;
 }
 
 .sec_01 .img_area {
@@ -167,7 +219,7 @@ header .nav:hover .bar {
   right:0px;
   width: 530px;
   height: 390px;
-  background: linear-gradient(141deg, rgb(235 255 155 / 98%) 0.4%, #6db6f5 99.89%);;
+  background: linear-gradient(141deg, rgb(235 255 155 / 98%) 0.4%, #6db6f5 99.89%);
   border-radius: 34% 78% 45% 65% / 40% 55% 55% 60%;
   transition: 0.5s;
 }
@@ -192,4 +244,20 @@ header .nav:hover .bar {
   background: linear-gradient(289deg, #bbe1f3, #f9b1b1);
   border-radius: 80% 60% 80% 65%;
   box-shadow: 10px 5px 15px rgb(0 0 0 / 10%);
+}
+
+.arrow {
+  position: absolute;
+  top: 620px;
+  right: 240px;
+  stroke-dasharray: 60;
+  stroke-dashoffset: 120;
+  animation: dash 2.5s linear infinite;
+}
+.arrow_txt{
+  color:#fff;
+  position: absolute;
+    right: 100px;
+    bottom: -10px;
+    letter-spacing: 2px;
 }
