--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -707,7 +707,7 @@ body.nav_active footer {
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url('/assets/img/Tomorrow_house.png');
+  background-image: url('../img/Tomorrow_house.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
